--- a/test/fixtures/templates/base.erb
+++ b/test/fixtures/templates/base.erb
@@ -11,7 +11,7 @@ module Ebay
 <% for node in nodes -%>
       <%= node.to_s %>
 <% end -%>
-<% for line in customization -%>
+<% customization.each_line do |line| -%>
       <%= line.chomp %>
 <% end -%>
     end
