--- a/lib/ebay/schema/mapper/templates/abstract_request.erb
+++ b/lib/ebay/schema/mapper/templates/abstract_request.erb
@@ -11,3 +11,8 @@ end
 def detail_level=(value)
   @detail_levels = Array(value)
 end
+
+# Add credentials to all requests
+def requester_credentials
+  XMLRequesterCredentials.new(:ebay_auth_token => auth_token)
+end
